tests/ui/into-adapter-conflict.fail.stderr
error: `adapter` cannot be added with `into`
 --> tests/ui/into-adapter-conflict.fail.rs:5:21
  |
5 |     #[builder(into, adapter(|x: u32, y: u32| (x + 1, y + 1)))]
  |                     ^^^^^^^
